@@ -2,6 +2,7 @@ Changelog for hydra
 -------------------
 
 Release 8.1-pre
+* Fixed for cisco-enable if an intial Login/Password is used (thanks to joswr1te for reporting)
 * Added patch by tux-mind for better MySQL compilation and an Android patches and Makefile. Thanks!
 * Added xhydra gtk patch by Petar Kaleychev to support -e r reverse login attempt, thanks!
 * Fixed a crash in the cisco module (thanks to Anatoly Mamaev for reporting)
